--- a/Lecture 5/06_final_app/DESCRIPTION
+++ b/Lecture 5/06_final_app/DESCRIPTION
@@ -1,5 +1,6 @@
-Title: Lecture 5 - Shiny Apps
+Title: Shiny Apps
 Author: Pablo Benavides-Herrera
+Date: 2020-06-13
 DisplayMode: Showcase
 Tags: getting-started
 Type: Shiny
